# wargaming_vibes

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  jobs.py  main.py  models.py  service.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
apps/web/src/: App.tsx  api.ts  app.test.tsx  components.tsx  main.tsx  pages.tsx  styles.css
configs/: model_profiles.yaml  simulation.yaml
data/: catalog.duckdb  catalog.manifest.json
data/analysis/: lesson_clusters.jsonl  manifest.json  run_quality_rows.jsonl  template_approval_manifest.json  template_manifest.json  template_quality_rows.jsonl
data/coas/: blue_delay_center.json  blue_mobile_flank.json  red_direct_thrust.json
data/datasets/: aar_rows.jsonl  event_rows.jsonl  instantiation_rows.jsonl  lesson_rows.jsonl  manifest.json  run_manifest_rows.jsonl
data/force_packages/: fp_blue_001.json  fp_red_001.json
data/scenarios/: scn_corridor_001.json
data/templates/coas/: blue_delay_center_template.json  blue_mobile_flank_template.json  red_direct_thrust_template.json
docs/: analysis_workflows.md  architecture.md  frontend.md  offline_generation.md  simulation_design.md
prompts/offline/: coa_generator.md  force_composer.md  scenario_architect.md
src/oeg/: __init__.py  __main__.py  cli.py  paths.py  workflows.py
tests/api/: test_analyst_api.py
tests/integration/: test_cli.py
tests/unit/: test_generation_pipeline.py  test_generation_provider.py  test_sampling.py  test_template_quality.py
(+29 files in other folders)
