[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operational-experiment-generator"
version = "0.1.0"
description = "Structured operational scenario generation, simulation, and analysis toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.2,<2.0",
  "openai>=1.109,<2.0",
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
oeg = "oeg.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
